# data-contract-x

./: .gitignore  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
dcx/: __init__.py  api.py  cli.py  import_commands.py  serve.py  yaml_style.py
dcx/apply/: __init__.py  snowflake.py
dcx/enrich/: __init__.py  all.py  base.py  columns.py  quality.py  tags.py
dcx/exporters/: __init__.py  command.py  dbt.py  snowflake.py
dcx/importers/: __init__.py  kafka.py  registry.py  snowflake.py
examples/: customers_contract.yaml  iot_events_contract.yaml  tags_catalog.yaml
tests/: conftest.py  test_api.py  test_apply.py  test_dbt_export.py  test_enrich.py  test_kafka_import.py  test_quality_dmf.py  test_smoke.py  test_snowflake_export.py  test_snowflake_import.py  test_target.py  test_yaml_style.py
