[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# PyPI distribution name. The import package and CLI stay `dcx`.
name = "datacontract-x"
version = "0.1.0"
description = "Data Contract eXtended — AI-native, platform-extensible data contracts: LLM enrichment (descriptions, tags, data quality), live import, and apply. Built on datacontract-cli."
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [{ name = "MickaelBZH" }]
requires-python = ">=3.10,<3.13"
keywords = [
    "data-contract", "odcs", "data-quality", "data-governance", "data-catalog",
    "llm", "ai", "datacontract-cli", "metadata", "tagging", "snowflake",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    # dcx extends datacontract-cli via internal APIs (factory hooks + a few
    # monkeypatches), so it is pinned to the 0.12.x line it is tested against.
    # Widen this only after validating against a newer datacontract-cli.
    # The `avro` extra powers the AVRO path of `dcx import kafka`.
    "datacontract-cli[avro]>=0.12.4,<0.13",
    "typer>=0.18.0,<0.26",
    "open-data-contract-standard>=3.1.2,<4.0.0",
    "fastapi>=0.115.0,<0.137.0",
    "uvicorn>=0.30,<1.0",
    "pyyaml>=6.0,<7.0",
    "snowflake-connector-python>=3.0,<4.0",
    "litellm>=1.50,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "httpx>=0.27,<1.0",
]

[project.urls]
Homepage = "https://github.com/MickaelBZH/data-contract-x"
Repository = "https://github.com/MickaelBZH/data-contract-x"
Issues = "https://github.com/MickaelBZH/data-contract-x/issues"

[project.scripts]
dcx = "dcx.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dcx*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    'ignore:Field name "schema" in .* shadows an attribute in parent "BaseModel":UserWarning',
]
